Added Authentication, Mail, Basic DB

--- a/jukebox/src/app/app.component.html
+++ b/jukebox/src/app/app.component.html
@@ -1,1 +1,4 @@
 <h1>Hello World</h1>
+<button (click)="play()">Play</button>
+<button (click)="play()">Next</button>
+<button (click)="stop()">Stop</button>
