--- a/jukebox/src/app/security/changePassword/changePassword.component.html
+++ b/jukebox/src/app/security/changePassword/changePassword.component.html
@@ -1,25 +1,25 @@
 <div class="bottomSpacer">
   <h1>Password ändern</h1>
-  <md-card>
+  <mat-card>
     <form id="password-reset" name="password-reset" fxLayout="column" #f="ngForm"
           (ngSubmit)="f.form.valid && changePassword()">
       <br>
-      <md-input-container>
-        <input mdInput type="password" placeholder="Neues Passwort" value="" name="password" id="password"
+      <mat-input-container>
+        <input matInput type="password" placeholder="Neues Passwort" value="" name="password" id="password"
                [(ngModel)]="password"
                required>
-        <md-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</md-error>
-      </md-input-container>
-      <md-input-container>
-        <input mdInput type="password" placeholder="Neues Passwort wiederholen" value="" name="passwordRepeat"
+        <mat-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</mat-error>
+      </mat-input-container>
+      <mat-input-container>
+        <input matInput type="password" placeholder="Neues Passwort wiederholen" value="" name="passwordRepeat"
                id="passwordRepeat"
                [(ngModel)]="passwordRepeat" required>
-        <md-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</md-error>
-      </md-input-container>
+        <mat-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</mat-error>
+      </mat-input-container>
       <div fxLayout="row" fxLayoutAlign="end center">
-        <button md-raised-button color="primary" type="submit" [disabled]="loading">Ändern</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="loading">Ändern</button>
       </div>
       <p *ngIf="error" class="mat-input-error">{{error}}</p>
     </form>
-  </md-card>
+  </mat-card>
 </div>
