--- a/jukebox/src/app/security/resetPassword/resetPassword.component.html
+++ b/jukebox/src/app/security/resetPassword/resetPassword.component.html
@@ -1,19 +1,19 @@
 <div class="bottomSpacer">
   <h1>Password vergessen?</h1>
-  <md-card>
-    <md-card-content>
+  <mat-card>
+    <mat-card-content>
       <p>Gib deine Emailadresse ein, und warte auf unsere Email :)</p>
       <form name="form" (ngSubmit)="f.form.valid && request()" #f="ngForm" novalidate fxLayout="column">
-        <md-input-container [ngClass]="{ 'has-error': f.submitted }">
-          <input mdInput type="text" name="username" id="username" placeholder="Email" [(ngModel)]="username"
+        <mat-input-container [ngClass]="{ 'has-error': f.submitted }">
+          <input matInput type="text" name="username" id="username" placeholder="Email" [(ngModel)]="username"
                  required>
-          <md-error>Die E-Mail-Adresse muss angegeben werden!</md-error>
-        </md-input-container>
+          <mat-error>Die E-Mail-Adresse muss angegeben werden!</mat-error>
+        </mat-input-container>
         <div fxLayout="row" fxLayoutAlign="end center">
-          <button md-raised-button color="primary" [disabled]="loading">Senden</button>
+          <button mat-raised-button color="primary" [disabled]="loading">Senden</button>
         </div>
         <p *ngIf="error" class="mat-input-error">{{error}}</p>
       </form>
-    </md-card-content>
-  </md-card>
+    </mat-card-content>
+  </mat-card>
 </div>
