--- a/jukebox/src/app/shared/save-changes-dialog/save-changes-dialog.component.html
+++ b/jukebox/src/app/shared/save-changes-dialog/save-changes-dialog.component.html
@@ -1,9 +1,9 @@
-<h1 md-dialog-title>Ungespeicherte Änderungen!</h1>
-<md-dialog-content>
+<h1 mat-dialog-title>Ungespeicherte Änderungen!</h1>
+<mat-dialog-content>
   <p>Sind Sie sicher, dass Sie die Seite verlassen wollen? Alle ungespeicherten Änderungen gehen verloren!</p>
-</md-dialog-content>
-<md-dialog-actions>
-  <button md-button md-dialog-close="saveContinue">Speichern & Weiter</button>
-  <button md-button md-dialog-close="continue">Weiter ohne Speichern</button>
-  <button md-button md-dialog-close="cancle">Abbrechen</button>
-</md-dialog-actions>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close="saveContinue">Speichern & Weiter</button>
+  <button mat-button mat-dialog-close="continue">Weiter ohne Speichern</button>
+  <button mat-button mat-dialog-close="cancle">Abbrechen</button>
+</mat-dialog-actions>
