--- a/jukebox/src/app/app.component.html
+++ b/jukebox/src/app/app.component.html
@@ -6,7 +6,7 @@
   <span id="user">User</span>
 </mat-toolbar>
 <mat-sidenav-container>
-  <mat-sidenav mode="side" #sidenav opened="true">
+  <mat-sidenav mode="side" #sidenav >
     <mat-nav-list>
       <mat-list-item><p>Item 1</p></mat-list-item>
       <mat-list-item><p>Item 3</p></mat-list-item>
@@ -14,7 +14,6 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    Main Content
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
