Implemented login for Frontend

--- a/jukebox/src/app/app.component.html
+++ b/jukebox/src/app/app.component.html
@@ -3,13 +3,16 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span id="title">Jukebox</span>
-  <span id="user">User</span>
 </mat-toolbar>
 <mat-sidenav-container>
   <mat-sidenav mode="side" #sidenav >
     <mat-nav-list>
-      <mat-list-item><p>Item 1</p></mat-list-item>
-      <mat-list-item><p>Item 3</p></mat-list-item>
+      <mat-list-item routerLink="auth/login">
+        <p>Login</p>
+      </mat-list-item>
+      <mat-list-item routerLink="auth/register">
+        <p>Register</p>
+      </mat-list-item>
       <mat-list-item><p>Item 3</p></mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
