--- a/jukebox/src/app/security/changePassword/changePassword.component.html
+++ b/jukebox/src/app/security/changePassword/changePassword.component.html
@@ -1,7 +1,6 @@
-<div class="bottomSpacer">
-  <h1>Password ändern</h1>
+  <h1 class="textCenter">Password ändern</h1>
   <mat-card>
-    <form id="password-reset" name="password-reset" fxLayout="column" #f="ngForm"
+    <form id="password-reset" name="password-reset" #f="ngForm"
           (ngSubmit)="f.form.valid && changePassword()">
       <br>
       <mat-input-container>
@@ -16,10 +15,9 @@
                [(ngModel)]="passwordRepeat" required>
         <mat-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</mat-error>
       </mat-input-container>
-      <div fxLayout="row" fxLayoutAlign="end center">
+      <div>
         <button mat-raised-button color="primary" type="submit" [disabled]="loading">Ändern</button>
       </div>
       <p *ngIf="error" class="mat-input-error">{{error}}</p>
     </form>
   </mat-card>
-</div>
