--- a/jukebox/src/app/security/resetPassword/resetPassword.component.html
+++ b/jukebox/src/app/security/resetPassword/resetPassword.component.html
@@ -1,19 +1,17 @@
-<div class="bottomSpacer">
-  <h1>Password vergessen?</h1>
+  <h1 class="textCenter">Password vergessen?</h1>
   <mat-card>
     <mat-card-content>
       <p>Gib deine Emailadresse ein, und warte auf unsere Email :)</p>
-      <form name="form" (ngSubmit)="f.form.valid && request()" #f="ngForm" novalidate fxLayout="column">
+      <form name="form" (ngSubmit)="f.form.valid && request()" #f="ngForm" novalidate >
         <mat-input-container [ngClass]="{ 'has-error': f.submitted }">
           <input matInput type="text" name="username" id="username" placeholder="Email" [(ngModel)]="username"
                  required>
           <mat-error>Die E-Mail-Adresse muss angegeben werden!</mat-error>
         </mat-input-container>
-        <div fxLayout="row" fxLayoutAlign="end center">
+        <div >
           <button mat-raised-button color="primary" [disabled]="loading">Senden</button>
         </div>
         <p *ngIf="error" class="mat-input-error">{{error}}</p>
       </form>
     </mat-card-content>
   </mat-card>
-</div>
