--- a/jukebox/src/app/app.component.css
+++ b/jukebox/src/app/app.component.css
@@ -11,21 +11,18 @@ mat-toolbar {
   display: grid;
   margin: 0;
   padding: 0 16px;
-  grid-template-columns: auto 1fr auto 1fr auto;
+  grid-template-columns: auto 1fr;
   grid-gap: 10px;
 }
 
 #btn_menu {
   grid-column: 1;
   grid-row: 1;
+
 }
 
 #title {
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 1;
-}
-
-#user {
-  grid-column: 5;
-  grid-row: 1;
+  text-align: center;
 }
