--- a/jukebox/src/app/security/login/login.component.css
+++ b/jukebox/src/app/security/login/login.component.css
@@ -1,3 +1,9 @@
 a#resetPasswordLink{
   text-underline: none;
 }
+
+form{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto;
+}
