--- a/jukebox/src/app/security/login/login.component.html
+++ b/jukebox/src/app/security/login/login.component.html
@@ -1,29 +1,29 @@
-<div class="bottomSpacer">
-  <h1>Login</h1>
-      <md-progress-bar
+
+  <h1 class="textCenter">Login</h1>
+      <mat-progress-bar
         color="accent"
         mode="indeterminate"
         *ngIf="loading">
-      </md-progress-bar>
-  <md-card>
-    <md-card-content>
-      <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate fxLayout="column">
-        <md-input-container [ngClass]="{ 'has-error': f.submitted }">
-          <input mdInput type="text" name="username" placeholder="Email" id="username" [(ngModel)]="username" required>
-          <md-error>Der Benutzername muss angegeben werden!</md-error>
-        </md-input-container>
-        <md-input-container>
-          <input mdInput type="password" placeholder="Passwort" name="password" id="password" [(ngModel)]="password"
+      </mat-progress-bar>
+  <mat-card>
+    <mat-card-content>
+      <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate >
+        <mat-input-container id="in_username" [ngClass]="{ 'has-error': f.submitted }">
+          <input matInput type="text" name="username" placeholder="Email" id="username" [(ngModel)]="username" required>
+          <mat-error>Der Benutzername muss angegeben werden!</mat-error>
+        </mat-input-container>
+        <mat-input-container id="in_password">
+          <input matInput type="password" placeholder="Passwort" name="password" id="password" [(ngModel)]="password"
                  required>
-          <md-error>Das Passwort muss angegeben werden!</md-error>
-        </md-input-container>
-        <div fxLayout="column" fxLayoutAlign="space-between center">
-          <button md-raised-button color="primary" [disabled]="loading">Login</button>
+          <mat-error>Das Passwort muss angegeben werden!</mat-error>
+        </mat-input-container>
+        <div >
+          <button mat-raised-button color="primary" [disabled]="loading">Login</button>
           <br>
           <a id="resetPasswordLink" routerLink="{{resetPasswordRoute}}">Passwort vergessen? </a>
         </div>
         <p *ngIf="error" class="mat-input-error">{{error}}</p>
       </form>
-    </md-card-content>
-  </md-card>
-</div>
+    </mat-card-content>
+  </mat-card>
+
