--- a/jukebox/src/app/security/register/register.component.html
+++ b/jukebox/src/app/security/register/register.component.html
@@ -1,16 +1,14 @@
-<div class="bottomSpacer">
-  <h1>Register</h1>
-  <md-card>
-    <form id="register" name="register" fxLayout="column" #f="ngForm" (ngSubmit)="f.valid && register()">
+  <h1 class="textCenter">Register</h1>
+  <mat-card>
+    <form id="register" name="register" #f="ngForm" (ngSubmit)="f.valid && register()">
       <br>
-      <md-input-container>
-        <input mdInput type="email" id="email" placeholder="Email" value="" name="email" [(ngModel)]="email" required>
-        <md-error>Die E-Mail-Adresse muss angegeben werden!</md-error>
-      </md-input-container>
-      <div fxLayout="row" fxLayoutAlign="end center">
-        <button md-raised-button color="primary" [disabled]="loading">Register</button>
+      <mat-input-container>
+        <input matInput type="email" id="email" placeholder="Email" value="" name="email" [(ngModel)]="email" required>
+        <mat-error>Die E-Mail-Adresse muss angegeben werden!</mat-error>
+      </mat-input-container>
+      <div>
+        <button mat-raised-button color="primary" [disabled]="loading">Register</button>
       </div>
       <p *ngIf="f.submitted && errorMessage" class="mat-input-error">{{errorMessage}}</p>
     </form>
-  </md-card>
-</div>
+  </mat-card>
