Implemented basic NavItem Logic Added Material Icons fonts

--- a/jukebox/src/app/app.component.css
+++ b/jukebox/src/app/app.component.css
@@ -26,3 +26,13 @@ mat-toolbar {
   grid-row: 1;
   text-align: center;
 }
+
+
+.mat-expansion-panel:not([class*=mat-elevation-z]) {
+  box-shadow: none !important;
+}
+
+.mat-expansion-panel-header{
+  font-size: 16px !important;
+  padding: 0 16px;
+}
