Implemented better Nav logic added logout component changed navigation to eager load security module (cleanly)

--- a/jukebox/src/app/navigation/save-changes-dialog/save-changes-dialog.component.html
+++ b/jukebox/src/app/navigation/save-changes-dialog/save-changes-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Ungespeicherte Änderungen!</h1>
+<h1 mat-dialog-title>{{_title}}</h1>
 <mat-dialog-content>
-  <p>Sind Sie sicher, dass Sie die Seite verlassen wollen? Alle ungespeicherten Änderungen gehen verloren!</p>
+  <p>{{_content}}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close="saveContinue">Speichern & Weiter</button>
