--- a/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.css
+++ b/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.css
@@ -1,8 +1,10 @@
 mat-sidenav-container{
   height: calc(100vh - 64px);
-  margin-top: 70px;
+  margin-top: 60px;
   width: 100%;
 }
+
+
 mat-toolbar {
   position: fixed;
   top: 0;
@@ -13,6 +15,20 @@ mat-toolbar {
   padding: 0;
   grid-template-columns: 60px 1fr;
   grid-gap: 10px;
+}
+
+#sidenavContainer {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+#sidenavList{
+  grid-row: 1;
+}
+
+#sidenavUser{
+  grid-row: 3;
+  padding-bottom: 20px;
 }
 
 #btn_menu {
@@ -27,3 +43,8 @@ mat-toolbar {
   text-align: center;
 }
 
+
+.mat-expansion-panel-header{
+  font-size: 16px !important;
+  padding: 0 16px;
+}
