--- a/jukebox/src/styles.css
+++ b/jukebox/src/styles.css
@@ -59,3 +59,8 @@ form{
 .mat-expansion-panel-body {
   padding: 0 !important;
 }
+
+mat-list-item {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2);
+}
+
