--- a/jukebox/src/app/song/song-selection/song-selection.component.scss
+++ b/jukebox/src/app/song/song-selection/song-selection.component.scss
@@ -1,17 +1,21 @@
 .gridWrapper{
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto auto 1fr auto;
 }
 
 app-current-player-status{
-  grid-row: 3;
+  grid-row: 4;
 }
 
 mat-list {
-  grid-row: 1;
+  grid-row: 2;
 }
 
 mat-list-item button {
   margin:  0 0 0 auto;
 }
 
+form{
+  grid-row: 1;
+  padding: 0 1em;
+}
