implemented PlayerCommands implemented Commands as echo right now implemented front end echo stub

--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -1,4 +1,5 @@
 <div class="gridWrapper">
+  <button mat-button (click)="btn_click()">Click Me</button>
   <form>
     <mat-form-field>
       <input type="text" matInput placeholder="Search here..." (keyup)="searchBarTyped($event.target.value)">
