--- a/jukebox/src/app/player/player-selection/player-selection.component.html
+++ b/jukebox/src/app/player/player-selection/player-selection.component.html
@@ -1,4 +1,10 @@
 <mat-list>
+  <mat-list-item>
+    <input placeholder="Playername" #in_playername>
+    <button mat-button (click)="createPlayer(in_playername.value)">
+      <mat-icon>add_box</mat-icon>
+    </button>
+  </mat-list-item>
   <mat-list-item *ngFor="let item of _availalbePlayers">
     <p>{{item.name}}</p>
     <button mat-button (click)="selectPlayer(item)">Select</button>
