--- a/jukebox/src/app/player/web-player/web-player.component.html
+++ b/jukebox/src/app/player/web-player/web-player.component.html
@@ -1,5 +1,7 @@
-<h1>Player: {{_webPlayerService.player?.name}}</h1>
-<p>Is Playing: {{_state == "Playing"}}</p>
+<h1>Player: {{_activePlayer.name}}</h1>
+<p>Is Playing: {{_activePlayer.state == "Playing"}}</p>
+<p>Playlist:</p>
+<p *ngFor="let song of _activePlayer.playlist">{{song.title}} - {{song.artists[0]}}</p>
 
 <button mat-button (click)="previous()" [disabled]="!_canPrevious">Previous</button>
 <button mat-button (click)="playPause()" [disabled]="!_canPlay">Play</button>
