reverted environment back to localhost for the websocket fixed the song display in player-status

--- a/jukebox/src/app/player/current-player-status/current-player-status.component.html
+++ b/jukebox/src/app/player/current-player-status/current-player-status.component.html
@@ -1,5 +1,5 @@
 <div>
 <p id="stat_playerName">{{_activePlayer.name}}</p>
-<p id="stat_song" *ngIf="_activePlayer.isPlaying">{{_activePlayer?.currentSong?.title}} - {{_activePlayer?.currentSong?.artist}}</p>
+<p id="stat_song" >{{_currentSong?.title}} - {{_currentSong?.artists[0]}}</p>
 
 </div>
