--- a/jukebox/src/app/player/player-selection/player-selection.component.html
+++ b/jukebox/src/app/player/player-selection/player-selection.component.html
@@ -1,12 +1,8 @@
-<mat-list>
-  <mat-list-item>
-    <input placeholder="Playername" #in_playername>
-    <button mat-button (click)="createPlayer(in_playername.value)">
-      <mat-icon>add_box</mat-icon>
-    </button>
+<mat-nav-list>
+  <mat-list-item routerLink="/player/create">
+    Create New Player
   </mat-list-item>
-  <mat-list-item *ngFor="let item of _availalbePlayers">
-    <p>{{item.name}}</p>
-    <button mat-button (click)="selectPlayer(item)">Select</button>
+  <mat-list-item *ngFor="let item of _availalbePlayers" (click)="selectPlayer(item)">
+    {{item.name}}
   </mat-list-item>
-</mat-list>
+</mat-nav-list>
