--- a/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar color="primary">
-  <button mat-button id="btn_menu" (click)="sidenav.toggle()">
+  <button mat-button id="btn_menu" (click)="sidenav.toggle()" *ngIf="mobileQuery.matches">
     <mat-icon>menu</mat-icon>
   </button>
   <span id="title">Jukebox</span>
 </mat-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav mode="over" #sidenav id="sidenavContainer">
+  <mat-sidenav mode="side" #sidenav id="sidenavContainer">
 
     <mat-nav-list id="sidenavList">
       <app-nav-item *ngFor="let item of _navItems" [CurrentItem]="item" (ItemClicked)="sidenav.toggle()"></app-nav-item>
