--- a/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.html
+++ b/jukebox/src/app/navigation/navigation-bar/navigation-bar.component.html
@@ -9,21 +9,8 @@
   <mat-sidenav #sidenav id="sidenavContainer">
 
     <mat-nav-list id="sidenavList">
-      <app-nav-item *ngFor="let item of _navItems" [CurrentItem]="item" (ItemClicked)="sidenav.toggle()"></app-nav-item>
+      <app-nav-item *ngFor="let item of _navItems" [CurrentItem]="item" (ItemClicked)="navItemClicked()"></app-nav-item>
     </mat-nav-list>
-
-    <mat-expansion-panel id="sidenavUser">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Username
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-        <mat-nav-list>
-          <mat-list-item>
-            Logout
-          </mat-list-item>
-        </mat-nav-list>
-    </mat-expansion-panel>
 
   </mat-sidenav>
   <mat-sidenav-content>
