--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -1,15 +1,1 @@
-<div class="gridWrapper">
-    <mat-form-field>
-      <input type="text" matInput placeholder="Search here..." (keyup)="searchBarTyped($event.target.value)">
-    </mat-form-field>
-  <mat-list>
-    <mat-list-item *ngFor="let item of _availableSongs">
-        <p>{{item.title}} - {{item.artists[0]}}</p>
-        <button mat-icon-button (click)="songSelected(item)">
-          <mat-icon>playlist_add</mat-icon>
-        </button>
-    </mat-list-item>
-  </mat-list>
-
-  <app-current-player-status></app-current-player-status>
-</div>
+<app-artist-overview></app-artist-overview>
