--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -1,1 +1,9 @@
-<app-artist-overview></app-artist-overview>
+<mat-tab-group>
+  <mat-tab label="Artists">
+    <app-artist-overview></app-artist-overview>
+  </mat-tab>
+  <mat-tab label="Albums">
+    <app-album-overview></app-album-overview>
+  </mat-tab>
+</mat-tab-group>
+
