--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -5,5 +5,8 @@
   <mat-tab label="Albums">
     <app-album-overview></app-album-overview>
   </mat-tab>
+  <mat-tab label="Songs">
+    <app-song-overview></app-song-overview>
+  </mat-tab>
 </mat-tab-group>
 
