sample implementation of reading from the fs and reading ID3 Tags

--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -1,3 +1,5 @@
+<button mat-button (click)="clickMe()">Click Me</button>
+
 <mat-tab-group>
   <mat-tab label="Artists">
     <app-artist-overview></app-artist-overview>
