fixed Property accessors fixed Prod env

--- a/jukebox/src/app/navigation/save-changes-dialog/save-changes-dialog.component.html
+++ b/jukebox/src/app/navigation/save-changes-dialog/save-changes-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>{{_title}}</h1>
+<h1 mat-dialog-title>{{title}}</h1>
 <mat-dialog-content>
-  <p>{{_content}}</p>
+  <p>{{content}}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close="saveContinue">Speichern & Weiter</button>
