--- a/jukebox/src/app/player/current-player-status/current-player-status.component.html
+++ b/jukebox/src/app/player/current-player-status/current-player-status.component.html
@@ -1,5 +1,5 @@
 <div>
-<p id="stat_playerName">{{_activePlayer.name}}</p>
-<p id="stat_song" >{{_currentSong?.title}} - {{_currentSong?.artists[0]}}</p>
+  <p id="stat_playerName">{{activePlayerPublic.name}}</p>
+  <p id="stat_song">{{currentSong?.title}} - TODO Fix Me</p>
 
 </div>
