--- a/jukebox/src/app/song/album-overview/album-overview.component.html
+++ b/jukebox/src/app/song/album-overview/album-overview.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let letter of alphabet">
     <div *ngIf="getAlbumByLetter(letter).length > 0">
       <h3 matSubheader>{{letter}}</h3>
-      <mat-list-item *ngFor="let album of getAlbumByLetter(letter)">
+      <mat-list-item *ngFor="let album of getAlbumByLetter(letter)" routerLink="/song/album-details/{{album.id}}">
         {{album.name}}
       </mat-list-item>
     </div>
