--- a/jukebox/src/app/song/artist-overview/artist-overview.component.html
+++ b/jukebox/src/app/song/artist-overview/artist-overview.component.html
@@ -2,7 +2,8 @@
   <div *ngFor="let letter of alphabet">
     <div *ngIf="getArtistsWithLetter(letter).length > 0">
       <h3 matSubheader>{{letter}}</h3>
-      <mat-list-item *ngFor="let artist of getArtistsWithLetter(letter)">
+      <mat-list-item *ngFor="let artist of getArtistsWithLetter(letter)"
+                     routerLink="/song/artist-details/{{artist.id}}">
         {{artist.name}}
       </mat-list-item>
     </div>
