implemented #3 now a player is automagically created if the previous player is not found anymore implemented #4 basic support for adding things to the playlist (cant remove anything though :D )

--- a/jukebox/src/app/song/song-overview/song-overview.component.html
+++ b/jukebox/src/app/song/song-overview/song-overview.component.html
@@ -1,10 +1,8 @@
-<mat-nav-list>
+<mat-list>
   <div *ngFor="let letter of alphabet">
     <div *ngIf="getSongByLetter(letter).length > 0">
       <h3 matSubheader>{{letter}}</h3>
-      <mat-list-item *ngFor="let song of getSongByLetter(letter)">
-        {{song.title}}
-      </mat-list-item>
+      <app-song-list-view-model *ngFor="let song of getSongByLetter(letter)" [Song]="song"></app-song-list-view-model>
     </div>
   </div>
-</mat-nav-list>
+</mat-list>
