--- a/jukebox/src/app/song/song-search/song-search.component.html
+++ b/jukebox/src/app/song/song-search/song-search.component.html
@@ -3,12 +3,7 @@
     <input type="text" matInput placeholder="Search here..." (keyup)="searchBarTyped($event.target.value)">
   </mat-form-field>
   <mat-list>
-    <mat-list-item *ngFor="let item of availableSongs">
-      <p>{{item.title}} - {{item.artists[0]}}</p>
-      <button mat-icon-button (click)="songSelected(item)">
-        <mat-icon>playlist_add</mat-icon>
-      </button>
-    </mat-list-item>
+    <app-song-list-view-model *ngFor="let item of availableSongs" [Song]="item"></app-song-list-view-model>
   </mat-list>
 
 </div>
