worked on #10 (not wokring under windows but maybe a win bug)

--- a/jukebox/src/app/player/web-player/web-player.component.html
+++ b/jukebox/src/app/player/web-player/web-player.component.html
@@ -8,3 +8,4 @@
 <button mat-button (click)="playPause()" [disabled]="!canPause">Pause</button>
 <button mat-button (click)="next()" [disabled]="!canNext">Next</button>
 <button mat-button (click)="stop()" [disabled]="!canStop">Stop</button>
+<button (click)="clickMe()" mat-button>ClickMe</button>
