--- a/jukebox/src/app/security/changePassword/changePassword.component.html
+++ b/jukebox/src/app/security/changePassword/changePassword.component.html
@@ -3,18 +3,18 @@
     <form id="password-reset" name="password-reset" #f="ngForm"
           (ngSubmit)="f.form.valid && changePassword()">
       <br>
-      <mat-input-container>
+      <mat-form-field>
         <input matInput type="password" placeholder="Neues Passwort" value="" name="password" id="password"
                [(ngModel)]="password"
                required>
         <mat-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</mat-error>
-      </mat-input-container>
-      <mat-input-container>
+      </mat-form-field>
+      <mat-form-field>
         <input matInput type="password" placeholder="Neues Passwort wiederholen" value="" name="passwordRepeat"
                id="passwordRepeat"
                [(ngModel)]="passwordRepeat" required>
         <mat-error>Das Passwort muss mindestens ein Zeichen und darf maximal 24 Zeichen lang sein!</mat-error>
-      </mat-input-container>
+      </mat-form-field>
       <div>
         <button mat-raised-button color="primary" type="submit" [disabled]="loading">Ändern</button>
       </div>
