--- a/jukebox/src/app/security/resetPassword/resetPassword.component.html
+++ b/jukebox/src/app/security/resetPassword/resetPassword.component.html
@@ -3,11 +3,11 @@
     <mat-card-content>
       <p>Gib deine Emailadresse ein, und warte auf unsere Email :)</p>
       <form name="form" (ngSubmit)="f.form.valid && request()" #f="ngForm" novalidate >
-        <mat-input-container [ngClass]="{ 'has-error': f.submitted }">
+        <mat-form-field [ngClass]="{ 'has-error': f.submitted }">
           <input matInput type="text" name="username" id="username" placeholder="Email" [(ngModel)]="username"
                  required>
           <mat-error>Die E-Mail-Adresse muss angegeben werden!</mat-error>
-        </mat-input-container>
+        </mat-form-field>
         <div >
           <button mat-raised-button color="primary" [disabled]="loading">Senden</button>
         </div>
