working on new sidenav NOT COMPILING

--- a/jukebox/src/app/menu/nav-item/nav-item.component.html
+++ b/jukebox/src/app/menu/nav-item/nav-item.component.html
@@ -1,13 +1,6 @@
-<mat-expansion-panel *ngIf="CurrentItem.type === 'submenu'">
-  <mat-expansion-panel-header>
-    <mat-panel-title>{{CurrentItem.label}}</mat-panel-title>
-  </mat-expansion-panel-header>
-  <app-nav-item *ngFor="let subItem of CurrentItem.submenu" [CurrentItem]="subItem"
-                (ItemClicked)="ItemClicked.emit()"></app-nav-item>
-</mat-expansion-panel>
-
 <mat-list-item *ngIf="CurrentItem.type === 'normal' && CurrentItem.visible" (click)="itemClickHandler()">
-  <p>{{CurrentItem.label}}</p>
+  <mat-icon>{{icon}}</mat-icon>
+  <span>{{CurrentItem.label}}</span>
 </mat-list-item>
 
-<!-- TODO add seperator -->
+<mat-divider *ngIf="CurrentItem.type === 'separator' && CurrentItem.visible && IsExpanded"></mat-divider>
