--- a/jukebox/src/styles.scss
+++ b/jukebox/src/styles.scss
@@ -66,3 +66,13 @@ mat-list-item {
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2);
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                                   supported by Chrome and Opera */
+}
