--- a/jukebox/src/app/song/song-selection/song-selection.component.html
+++ b/jukebox/src/app/song/song-selection/song-selection.component.html
@@ -1,11 +1,11 @@
 <mat-tab-group>
-  <mat-tab label="Artists">
+  <mat-tab label="Artists" class="noselect">
     <app-artist-overview></app-artist-overview>
   </mat-tab>
-  <mat-tab label="Albums">
+  <mat-tab label="Albums" class="noselect">
     <app-album-overview></app-album-overview>
   </mat-tab>
-  <mat-tab label="Songs">
+  <mat-tab label="Songs" class="noselect">
     <app-song-overview></app-song-overview>
   </mat-tab>
 </mat-tab-group>
